tests/snapshots/validator_snapshots__validator_all@validator-168.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_struct_init_extra_field_errors.of
---
ParserError(
    "unexpected token '{'",
)
