tests/snapshots/validator_snapshots__validator_all@validator-169.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_self_member_access_in_method.of
---
ValidationErrors(
    [
        "unknown member 'x' on 'null' in function 'test_module::S::m'",
        "unknown variable 'self' in function 'test_module::S::m'",
    ],
)
