tests/snapshots/validator_snapshots__validator_all@validator-17.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/17_union_ast.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::show' (call to show arg 0): expected 'struct#0 | struct#1 | struct#2 | struct#3', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "unknown type 'List' in module 'test_module'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
    ],
)
