tests/snapshots/validator_snapshots__validator_all@validator-170.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_null_assignable_to_nullable_union.of
---
Ok
