tests/snapshots/validator_snapshots__validator_all@validator-172.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_method_call_via_member.of
---
Ok
