tests/snapshots/validator_snapshots__validator_all@validator-173.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_var_decl_no_type_no_init_errors.of
---
ValidationErrors(
    [
        "variable 'x' in function 'test_module::test' needs an explicit type annotation",
    ],
)
