tests/snapshots/validator_snapshots__validator_all@validator-174.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_return_type_mismatch_errors.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::test' (return): expected 'int64', found 'string'",
    ],
)
