tests/snapshots/validator_snapshots__validator_all@validator-175.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_unknown_variable_errors.of
---
ValidationErrors(
    [
        "unknown variable 'oops' in function 'test_module::test'",
    ],
)
