tests/snapshots/validator_snapshots__validator_all@validator-176.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_simple_body_typechecks.of
---
Ok
