tests/snapshots/validator_snapshots__validator_all@validator-177.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_struct_init_and_member_access.of
---
Ok
