tests/snapshots/validator_snapshots__validator_all@validator-178.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_while_non_bool_cond_errors.of
---
Err(
    [
        TypeMismatch {
            function: "test_module::test",
            context: "while condition",
            expected: "bool",
            actual: "int64",
        },
    ],
)
